Avoid covering content with common parts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,3 +23,10 @@ button {
   appearance: none;
   font-family: var(--app-font-family);
 }
+
+html,
+body,
+#___gatsby,
+#gatsby-focus-wrapper {
+  height: 100%;
+}
