--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -1,7 +1,7 @@
-.spacer {
+.bg {
   overflow: hidden;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: calc(20px + 12px + 10px + 24px + 20px) /* Header */ 0
     calc(20px + 12px + 20px); /* Footer */
 }
